@@ -1,3 +1,0 @@
-#ifndef HZ
-#define HZ 60
-#endif
